@@ -33,15 +33,12 @@ import com.bakdata.kafka.SenderBuilder.SimpleProducerRecord;
 import com.bakdata.kafka.SimpleKafkaStreamsApplication;
 import com.bakdata.kafka.TestApplicationRunner;
 import com.bakdata.kafka.test_applications.WordCount;
-import com.bakdata.kafka.util.ImprovedAdminClient;
+import com.bakdata.kafka.util.AdminClientX;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
-import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.common.serialization.LongDeserializer;
 import org.apache.kafka.common.serialization.StringDeserializer;
 import org.apache.kafka.common.serialization.StringSerializer;
@@ -81,8 +78,8 @@ class StreamsCleanUpTest extends KafkaTest {
             final KafkaTestClient testClient = this.newTestClient();
             testClient.createTopic(app.getOutputTopic());
             testClient.send()
-                    .with(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class)
-                    .with(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, StringSerializer.class)
+                    .withKeySerializer(new StringSerializer())
+                    .withValueSerializer(new StringSerializer())
                     .to(app.getInputTopics().get(0), List.of(
                             new SimpleProducerRecord<>(null, "blub"),
                             new SimpleProducerRecord<>(null, "bla"),
@@ -100,7 +97,7 @@ class StreamsCleanUpTest extends KafkaTest {
             awaitClosed(app.createExecutableApp());
             this.clean(app);
 
-            try (final ImprovedAdminClient admin = testClient.admin()) {
+            try (final AdminClientX admin = testClient.admin()) {
                 this.softly.assertThat(admin.getTopicClient().exists(app.getOutputTopic()))
                         .as("Output topic is deleted")
                         .isFalse();
@@ -117,8 +114,8 @@ class StreamsCleanUpTest extends KafkaTest {
             final KafkaTestClient testClient = this.newTestClient();
             testClient.createTopic(app.getOutputTopic());
             testClient.send()
-                    .with(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class)
-                    .with(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, StringSerializer.class)
+                    .withKeySerializer(new StringSerializer())
+                    .withValueSerializer(new StringSerializer())
                     .to(app.getInputTopics().get(0), List.of(
                             new SimpleProducerRecord<>(null, "blub"),
                             new SimpleProducerRecord<>(null, "bla"),
@@ -136,7 +133,7 @@ class StreamsCleanUpTest extends KafkaTest {
             awaitClosed(app.createExecutableApp());
             this.reset(app);
 
-            try (final ImprovedAdminClient admin = testClient.admin()) {
+            try (final AdminClientX admin = testClient.admin()) {
                 this.softly.assertThat(admin.getTopicClient().exists(app.getOutputTopic()))
                         .as("Output topic exists")
                         .isTrue();
@@ -144,7 +141,7 @@ class StreamsCleanUpTest extends KafkaTest {
 
             final List<KeyValue<String, Long>> entriesTwice = expectedValues.stream()
                     .flatMap(entry -> Stream.of(entry, entry))
-                    .collect(Collectors.toList());
+                    .toList();
             this.runAndAssertContent(entriesTwice, "All entries are twice in the input topic after the 2nd run", app);
         }
     }
@@ -191,12 +188,12 @@ class StreamsCleanUpTest extends KafkaTest {
 
     private List<KeyValue<String, Long>> readOutputTopic(final String outputTopic) {
         final List<ConsumerRecord<String, Long>> records = this.newTestClient().read()
-                .with(ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG, StringDeserializer.class)
-                .with(ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG, LongDeserializer.class)
+                .withKeyDeserializer(new StringDeserializer())
+                .withValueDeserializer(new LongDeserializer())
                 .from(outputTopic, POLL_TIMEOUT);
         return records.stream()
                 .map(consumerRecord -> new KeyValue<>(consumerRecord.key(), consumerRecord.value()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void runAndAssertContent(final Iterable<? extends KeyValue<String, Long>> expectedValues,
